--- a/package.json
+++ b/package.json
@@ -1,17 +1,20 @@
 {
   "name": "javascript",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build" : "babel src/js -w -d src/dist/js"
   },
-  "author": "",
+  "description": "",
+  "main": "main.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/uniskoal/Javascript-study.git"
+  },
   "license": "ISC",
-  "dependencies": {
-    "underscore": "^1.11.0"
-  },
+  
   "devDependencies": {
-    "gulp": "^4.0.2"
+    "@babel/cli": "^7.11.6",
+    "@babel/core": "^7.11.6",
+    "@babel/preset-env": "^7.11.5"
   }
 }
