--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "javascript",
   "version": "1.0.0",
   "scripts": {
-    "build" : "babel src/js -w -d src/dist/js"
+    "build": "webpack -w"
   },
   "description": "",
   "main": "main.js",
@@ -11,10 +11,12 @@
     "url": "git+https://github.com/uniskoal/Javascript-study.git"
   },
   "license": "ISC",
-  
   "devDependencies": {
     "@babel/cli": "^7.11.6",
     "@babel/core": "^7.11.6",
-    "@babel/preset-env": "^7.11.5"
+    "@babel/preset-env": "^7.11.5",
+    "babel-loader": "^8.1.0",
+    "webpack": "^4.44.2",
+    "webpack-cli": "^3.3.12"
   }
 }
